implement zone swagger
